# PRC

./: .gitignore  .travis.yml  CMakeLists.txt  README  README.md  config-hobu.sh  config.bat
cmake/: prc_utils.cmake
cmake/modules/: FindPDAL.cmake
include/prc/: ColorQuantizer.hpp  PRCdouble.hpp  PrcWriter.hpp  Writer.hpp  oPRCFile.hpp  writePRC.hpp
scripts/ci/: before_install.sh  common.sh  script.sh
src/: ColorQuantizer.cpp  PRCbitStream.cpp  PRCdouble.cpp  PrcWriter.cpp  Writer.cpp  oPRCFile.cpp  writePRC.cpp
test/: pipeline_MtStHelens.xml  pipeline_autzen_blue_green_sqrt.xml  pipeline_autzen_decimated.xml  pipeline_autzen_default.xml  pipeline_autzen_orange_linear.xml  pipeline_color.xml  pipeline_decimate_prc.xml  pipeline_large.xml  pipeline_prc.xml  pipeline_z_scale.xml
